--- a/app/views/recipe_foods/_form.html.erb
+++ b/app/views/recipe_foods/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: recipe_food) do |form| %>
+<%= form_with model: recipe_food, url: recipe_recipe_foods_path(@recipe) do |form| %>
   <% if recipe_food.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(recipe_food.errors.count, "error") %> prohibited this recipe_food from being saved:</h2>
@@ -17,18 +17,8 @@
   </div>
   
   <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div>
-    <%= form.label :recipe_id, style: "display: block" %>
-    <%= form.text_field :recipe_id %>
-  </div>
-
-  <div>
     <%= form.label :food_id, style: "display: block" %>
-    <%= form.text_field :food_id %>
+    <%= form.select :food_id, current_user.foods.map { |food| ["#{food.name} (#{food.measurement_unit}) #{food.id}", food.id ] }, {}%>
   </div>
 
   <div>
