--- a/app/views/recipe_foods/edit.html.erb
+++ b/app/views/recipe_foods/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this recipe food", @recipe_food %> |
-  <%= link_to "Back to recipe foods", recipe_foods_path %>
+  <%= link_to "Show this recipe food", recipe_recipe_food_path(@recipe, @recipe_food) %> |
+  <%= link_to "Back to recipe foods", recipe_recipe_foods_path(@recipe) %>
 </div>
