--- a/app/views/recipe_foods/show.html.erb
+++ b/app/views/recipe_foods/show.html.erb
@@ -3,8 +3,8 @@
 <%= render @recipe_food %>
 
 <div>
-  <%= link_to "Edit this recipe food", edit_recipe_food_path(@recipe_food) %> |
-  <%= link_to "Back to recipe foods", recipe_foods_path %>
+  <%= link_to "Edit this recipe food", edit_recipe_recipe_food_path(@recipe, @recipe_food) %> |
+  <%= link_to "Back to recipe foods", recipe_recipe_foods_path(@recipe) %>
 
-  <%= button_to "Destroy this recipe food", @recipe_food, method: :delete %>
+  <%= button_to "Destroy this recipe food", recipe_recipe_foods_path(@recipe), method: :delete %>
 </div>
