--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -10,3 +10,12 @@
 </div>
 
 <%= link_to "Add ingredient", new_recipe_recipe_food_path(@recipe), method: :new %>
+
+<div id="recipe_foods">
+  <% @recipe_foods.each do |recipe_food| %>
+    <%= render recipe_food %>
+    <p>
+      <%= link_to "Show this recipe food", recipe_recipe_food_path(@recipe, recipe_food) %>
+    </p>
+  <% end %>
+</div>
