--- a/app/views/recipe_foods/_form_update.html.erb
+++ b/app/views/recipe_foods/_form_update.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: recipe_food, url: recipe_recipe_foods_path(@recipe) do |form| %>
+<%= form_with model: recipe_food, url: recipe_recipe_food_path(@recipe, @recipe_food) do |form| %>
 
   <% if recipe_food.errors.any? %>
     <div style="color: red">
