--- a/app/views/recipe_foods/edit.html.erb
+++ b/app/views/recipe_foods/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing recipe food</h1>
 
-<%= render "form", recipe_food: @recipe_food %>
+<%= render "form_update", recipe_food: @recipe_food %>
 
 <br>
 
