--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -9,12 +9,12 @@ $roboto: 'Roboto Slab', serif;
 // colors
 
 $black: rgb(37, 37, 37);
-$red: #E07A5F;
-$dark-blue: #3D405B;
+$red: #e07a5f;
+$dark-blue: #3d405b;
 $mid-blue: rgb(48, 80, 141);
-$light-blue: #81B29A;
+$light-blue: #81b29a;
 $dark-gray: #2f2f2f;
 $dark-purple: rgb(98, 57, 117);
 $light-gray: rgb(183, 183, 183);
-$white: #F4F1DE;
-$yellow: #F2CC8F;
+$white: #f4f1de;
+$yellow: #f2cc8f;
