--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+  color: black
+}
+
 :root {
   font-family: $poppins;
 }
@@ -43,7 +48,7 @@ nav {
   width: 100%;
 }
 
-.nav-links > :last-child {
+.nav-links> :last-child {
   padding: 0.5rem;
   margin-left: auto;
   cursor: pointer;
