--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -2,13 +2,24 @@
 
 <h1>Recipes</h1>
 
+<%= link_to "New recipe", new_recipe_path %>
+
 <div id="recipes">
   <% @recipes.each do |recipe| %>
-    <%= render recipe %>
-    <p>
-      <%= link_to "Show this recipe", recipe %>
-    </p>
+    <%# <%= render recipe %>
+      <div class="recipe-container">
+        <div class="recipe-title">
+          <%= link_to recipe_path(recipe) do %>
+            <h3><%= recipe[:name] %></h3>
+          <% end %> 
+          <%= button_to "Destroy this recipe", recipe, method: :delete %>
+        </div>
+        <div class="recipe-description-container">
+          <p>
+            <%= recipe[:description] %>
+          </p>
+        </div>
+      </div>
   <% end %>
 </div>
 
-<%= link_to "New recipe", new_recipe_path %>
