--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -8,7 +8,7 @@
 
 a {
   text-decoration: none;
-  color: black
+  color: black;
 }
 
 :root {
@@ -48,7 +48,7 @@ nav {
   width: 100%;
 }
 
-.nav-links> :last-child {
+.nav-links > :last-child {
   padding: 0.5rem;
   margin-left: auto;
   cursor: pointer;
