--- a/app/views/public_recipes/index.html.erb
+++ b/app/views/public_recipes/index.html.erb
@@ -1,15 +1,17 @@
-<h1>PUBLIC</h1>
-<p style="color: green"><%= notice %></p>
+<section class="public-recipes-section">
+  <h1>PUBLIC RECIPES</h1>
+  <p style="color: green"><%= notice %></p>
+  <div id="recipes">
+    <% @recipes.each do |recipe| %>
 
-<h1>Recipes</h1>
 
-<div id="recipes">
-  <% @recipes.each do |recipe| %>
-    <%= render recipe %>
-    <p>
-      <%= link_to "Show this recipe", recipe %>
-    </p>
-  <% end %>
-</div>
+    
+      <%= render recipe %>
+      <p>
+        <%= link_to "Show this recipe", recipe %>
+      </p>
+    <% end %>
+  </div>
 
-<%= link_to "New recipe", new_recipe_path %>
+  <%= link_to "New recipe", new_recipe_path %>
+</section>
