--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,27 +1,29 @@
-<div id="<%= dom_id recipe %>">
-  <p>
-    <strong>Name:</strong>
-    <%= recipe.name %>
-  </p>
 
-  <p>
-    <strong>Preparation time:</strong>
-    <%= recipe.preparation_time %>
-  </p>
+  <div id="<%= dom_id recipe %>" class = "recipe-show-container">
+    <h2 class = 'title'>
+      <%= recipe.name %>
+    </h2>
 
-  <p>
-    <strong>Cooking time:</strong>
-    <%= recipe.cooking_time %>
-  </p>
+    <div class ="recipe-data">
+      <div class = "recipe-info">
+        <p>
+          <strong>Preparation time:</strong>
+          <%= recipe.preparation_time %>
+        </p>
 
-  <p>
-    <strong>Description:</strong>
-    <%= recipe.description %>
-  </p>
+        <p>
+          <strong>Cooking time:</strong>
+          <%= recipe.cooking_time %>
+        </p>
 
-  <p>
-    <strong>Public:</strong>
-    <%= recipe.public %>
-  </p>
+      </div>
 
-</div>
+      <p>
+        <strong><%= recipe.public? ? 'PUBLIC' : 'PRIVATE'%></strong>
+      </p>
+    </div>
+        <p>
+          <strong>Description:</strong>
+          <%= recipe.description %>
+        </p>
+  </div>
