--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,40 +1,37 @@
 <p style="color: green"><%= notice %></p>
+<section class="show-recipe-section">
+  <%= render @recipe %>
 
-<%= render @recipe %>
+  <% if can? :manage, @recipe %>
+    
+    <div class="recipe-show-actions">
+      <%= link_to "Generate Shopping List", '/general_shopping_list', :class => "new-recipe-button"%>
+      <%= link_to "Add ingredient", new_recipe_recipe_food_path(@recipe), method: :new, :class => "new-recipe-button" %>
+    </div>
+  <%end%>
 
-<% if can? :manage, @recipe %>
-  <div> 
-    <%= link_to "Edit this recipe", edit_recipe_path(@recipe) %> |
-
-
-  </div>
-  <div class="recipe-show-actions">
-    <%= link_to "Generate Shopping List", general_shopping_list_path %>
-    <%= link_to "Add ingredient", new_recipe_recipe_food_path(@recipe), method: :new %>
-  </div>
-<%end%>
-
-<table class="foods-table">
-  <thead>
-    <tr>
-      <th>Food</th>
-      <th>Quantity</th>
-      <th>Price</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @recipe_foods.each do |rf| %>
-        <tr>
-          <td>
-            <%= rf.food[:name] %>
-          </td>
-          <td>
-            <%= rf[:quantity] %>
-          </td>
-          <td>
-            <%= "$ #{rf.food[:price] * rf[:quantity]}" %>
-          </td>
-        </tr>
-    <% end %>
-  </tbody>
-</table>
+  <table class="foods-table">
+    <thead>
+      <tr>
+        <th>Food</th>
+        <th>Quantity</th>
+        <th>Price</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @recipe_foods.each do |rf| %>
+          <tr>
+            <td>
+              <%= rf.food[:name] %>
+            </td>
+            <td>
+              <%= rf[:quantity] %>
+            </td>
+            <td>
+              <%= "$ #{rf.food[:price] * rf[:quantity]}" %>
+            </td>
+          </tr>
+      <% end %>
+    </tbody>
+  </table>
+</section>
