--- a/app/assets/stylesheets/foods.scss
+++ b/app/assets/stylesheets/foods.scss
@@ -12,3 +12,22 @@ td {
   border-collapse: collapse;
   padding: 0.25rem;
 }
+
+.action-cell {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+}
+
+.action-button {
+  background: none;
+  border: none;
+  font-size: 1rem;
+  color: $red;
+  font-weight: 600;
+  cursor: pointer;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
