--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -18,9 +18,10 @@
   height: 200px;
   margin: 1rem 0;
   border-radius: 0.5rem;
-  background: #ffffff;
-  box-shadow: 6px 6px 24px #d6d6d6,
-    -6px -6px 24px #ffffff;
+  background: #fff;
+  box-shadow:
+    6px 6px 24px #d6d6d6,
+    -6px -6px 24px #fff;
 }
 
 .general-recipe-title {
