--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -8,12 +8,12 @@
       <div class = "recipe-info">
         <p>
           <strong>Preparation time:</strong>
-          <%= recipe.preparation_time %>
+          <%= "#{recipe.preparation_time} minutes" %>
         </p>
 
         <p>
           <strong>Cooking time:</strong>
-          <%= recipe.cooking_time %>
+          <%= "#{recipe.cooking_time} minutes" %>
         </p>
 
       </div>
