--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -41,20 +41,28 @@ nav {
   width: 100%;
 }
 
-.nav-links> :last-child {
+.nav-links > :last-child {
   padding: 0.5rem;
   margin-left: auto;
   cursor: pointer;
 }
 
+.login-links a {
+  transition: 0.2s;
+}
+
 .nav-links li a {
   text-decoration: none;
   color: black;
+}
 
-  &:hover {
-    text-decoration: underline;
-    text-underline-offset: 0.2rem;
-  }
+.login-links a:hover {
+  color: $dark-purple;
+}
+
+.nav-links li a:hover {
+  text-decoration: underline;
+  text-underline-offset: 0.2rem;
 }
 
 #logout-button .button_to button {
@@ -85,9 +93,10 @@ section {
 
 .login-section {
   border-radius: 1rem;
-  background: #ffffff;
-  box-shadow: 27px 27px 54px #d6d6d6,
-    -27px -27px 54px #ffffff;
+  background: #fff;
+  box-shadow:
+    27px 27px 54px #d6d6d6,
+    -27px -27px 54px #fff;
 
   h2 {
     margin-bottom: 1rem;
@@ -101,7 +110,6 @@ form.new_user {
 }
 
 .login-input {
-
   width: 100%;
   height: 2rem;
   border-radius: 0.5rem;
@@ -114,14 +122,15 @@ form.new_user {
   font-size: 1rem;
   padding: 0.5rem;
   border-radius: 0.5rem;
-  background: #ffffff;
-  box-shadow: 8px 8px 17px #d6d6d6,
-    -8px -8px 17px #ffffff;
+  background: #fff;
+  box-shadow:
+    8px 8px 17px #d6d6d6,
+    -8px -8px 17px #fff;
 
   &:hover {
-
-    box-shadow: inset 8px 8px 17px #d6d6d6,
-      inset -8px -8px 17px #ffffff;
+    box-shadow:
+      inset 8px 8px 17px #d6d6d6,
+      inset -8px -8px 17px #fff;
   }
 }
 
@@ -130,12 +139,4 @@ form.new_user {
   display: flex;
   flex-direction: column;
   gap: 0;
-}
-
-.login-links a {
-  transition: 0.2s;
-}
-
-.login-links a:hover {
-  color: $dark-purple;
 }
