--- a/app/views/recipe_foods/_form.html.erb
+++ b/app/views/recipe_foods/_form.html.erb
@@ -19,7 +19,7 @@
   
   <div>
     <%= form.label :food_id, style: "display: block" %>
-    <%= form.select :food_id, current_user.foods.map { |food| ["#{food.name} (#{food.measurement_unit}) #{food.id}", food.id ] }, {}%>
+    <%= form.select :food_id, current_user.foods.map { |food| ["#{food.name} (#{food.measurement_unit})", food.id ] }, {}%>
   </div>
 
   <div>
